@@ -1,0 +1,16 @@
+/****************************************************************************
+ *
+ * $Source$
+ * $Date$
+ * $Revision$
+ * $State$
+ * $Author$
+ *
+ ***************************************************************************/
+
+#ifndef __SYS_TERMIOS_H
+#define __SYS_TERMIOS_H 1
+#ifndef	__TERMIOS_H
+#include <termios.h>
+#endif
+#endif
