@@ -1,3 +1,10 @@
+Mon Sep  3 13:01:42 2001  Peter Naulls  <peter@erble.freeserve.co.uk>
+
+	* sys/termios.h: New header.
+	* sys/types.h: Include machine/endian.h.
+	* unixlib/local.h: Fix RISC OS spelling typos.
+	* !Help: Likewise.
+
 Mon Sep  3 09:29:42 2001  Nick Burrett  <nick.burrett@btinternet.com>
 
 	* sys/iocomm.h: Delete file -- duplicated by sys/ioctl.h.
